Increase the sidebar width to avoid cut off text.

--- a/api/css/extra.css
+++ b/api/css/extra.css
@@ -2,3 +2,11 @@
   --md-primary-fg-color:        #0d0d10;
   --md-accent-fg-color:         #ff1111;
 }
+
+.md-sidebar {
+  width: 18rem;
+}
+
+.md-nav {
+  width: 16rem;
+}
